[package]
name = "L19_Paola"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "^0.14.20", features = ["client", "http1", "http2", "runtime"] }
hyper-tls = "^0.5.0"
anyhow = "^1.0.58"
toml = "^0.5.9"
serde = { version = "^1.0.139", features = ["default", "derive"] }
serde_json = { version = "^1.0.82", features = ["default", "std", "alloc"] }
